--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "express": "^4.19.0"
+    "@prisma/client": "^6.2.2",
+    "express": "^4.19.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
+    "dotenv": "^17.2.3",
+    "prisma": "^6.2.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
   }
