--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^6.2.2",
     "express": "^4.19.0",
+    "jsonwebtoken": "^9.0.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.0.0",
     "dotenv": "^17.2.3",
     "prisma": "^6.2.2",
