--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     environment:
       PORT: "3000"
       DATABASE_URL: "postgres://coinkeeper:coinkeeper@db:5432/coinkeeper"
+      JWT_SECRET: "some-long-random-secret"
 
 volumes:
   db-data:
